--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<form action="#" method="post">
+<form action="{{ url_for('register') }}" method="post">
     <div class="form-group">
       <label for="email">Email address</label>
       <input type="email" class="form-control" id="email"
@@ -20,5 +20,13 @@
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+{% if form %}
+    <ul class=errors>
+    {% for error in field.errors %}
+      <li>{{ error }}</li>
+    {% endfor %}
+    </ul>
+{% endif %}
 
 {% endblock %}
