--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,31 +2,30 @@
 
 {% block content %}
 
-<form action="{{ url_for('register') }}" method="post">
+<form action="{{ url_for('register') }}" method="POST">
     <div class="form-group">
       <label for="email">Email address</label>
-      <input type="email" class="form-control" id="email"
-        aria-describedby="emailHelp" placeholder="Enter email">
+      <input type="email" class="form-control" id="email" required
+        aria-describedby="emailHelp" placeholder="Enter email" name="email">
     </div>
     <div class="form-group">
         <label for="username">UserName</label>
-        <input type="username" class="form-control"
-          id="UserName" placeholder="Enter Username">
+        <input type="username" class="form-control" required
+          id="UserName" placeholder="Enter Username" name="username">
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control"
+      <input type="password" class="form-control" required name="password"
         id="exampleInputPassword1" placeholder="Enter Password">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-
 {% if form %}
-    <ul class=errors>
-    {% for error in field.errors %}
-      <li>{{ error }}</li>
-    {% endfor %}
-    </ul>
+  {% for field, errors in form.errors.items() %}
+  <div class="alert alert-danger" role="alert">
+      {{ form[field].label }}: {{ ', '.join(errors) }}
+  </div>
+  {% endfor %}
 {% endif %}
 
 {% endblock %}
